--- a/General_analysis.ipynb
+++ b/General_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,22 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for df, battery_name in all_data:\n",
-    "    #plot_cycle(df, battery_name, 1)"
+    "for df, battery_name in all_data:\n",
+    "    plot_cycle(df, battery_name, 1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Capacity\n",
+    "Calculate the capacity by ompute the time interval between successive measurements, and then integrate the current wrt to time. I've used `numpy.trapz` trapezoidal rule mathematical function."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +155,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting capacity against cycles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Don't run this cell... too slow\n",
+    "for df, battery_name in all_data_c:\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(x=df['cycle number'], y=df['capacity/mAh'], mode='lines+markers', name=battery_name))\n",
+    "    fig.update_layout(title=f'Battery Capacity Against Number of Cycles for Battery {battery_name}',\n",
+    "                      xaxis_title='Cycle Number',\n",
+    "                      yaxis_title='Capacity (mAh)')\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Don't use these fns... too slow\n",
     "\n",
     "def resample(df, time_column, rule):\n",
     "    df[time_column] = pd.to_datetime(df[time_column], unit='s')\n",
