--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,37 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully imported test NX001_21-08-23 with shape (269049, 5)\n",
-      "Successfully imported test NX001_31-07-23 with shape (120655, 5)\n",
-      "Successfully imported test NX002_21-08-23 with shape (268652, 5)\n",
-      "Successfully imported test NX002_31-07-23 with shape (120808, 5)\n",
-      "Successfully imported test NX006_21-08-23 with shape (207146, 5)\n",
-      "Successfully imported test NX006_31-07-23 with shape (120806, 5)\n",
-      "Successfully imported test RS001_21-08-23 with shape (228545, 5)\n",
-      "Successfully imported test RS001_31-07-23 with shape (120465, 5)\n",
-      "Successfully imported test RS006_21-08-23 with shape (229161, 5)\n",
-      "Successfully imported test RS006_31-07-23 with shape (120383, 5)\n",
-      "Successfully imported test SG003_07-02-23 with shape (693003, 5)\n",
-      "Successfully imported test SG004_07-02-23 with shape (227678, 5)\n",
-      "Successfully imported test SG007_07-02-24 with shape (645535, 5)\n",
-      "Successfully imported test SG007_21-08-23 with shape (460741, 5)\n",
-      "Successfully imported test SG007_31-07-23 with shape (115995, 5)\n",
-      "Successfully imported test SG007_21-08-23 with shape (460741, 5)\n",
-      "Successfully imported test SG008_31-07-23 with shape (116828, 5)\n",
-      "Successfully imported test SG009_07-02-24 with shape (606579, 5)\n",
-      "Successfully imported test SG009_21-08-23 with shape (457872, 5)\n",
-      "Successfully imported test SG009_31-07-23 with shape (114977, 5)\n",
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_directory = 'Data/Cycling/'\n",
     "files = glob.iglob(data_directory +'**/*.txt', recursive=True)\n",
@@ -105,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,13 +127,13 @@
     "        # How does Python know that by specifying (group 1), (group 2) that you want to group by the unique value in the table?\n",
     "        # Doing something like this in another framework would require a whole search index with .unique() or iterating by cycle number values.\n",
     "        # Having to debug this to know how/why/what it is doing is why I hate implicit programming.\n",
-    "        group = group[group['I/mA'] < -0.5] # filter down the group to just the times which are discharging\n",
+    "        group = group[group['I/mA'] < 200] # filter down the group to just the times which are discharging\n",
     "        times = group['time/s'].values\n",
     "        currents = group['I/mA'].values\n",
     "        voltage = group['Ecell/V'].values\n",
     "        # need to filter to just the charge stage\n",
     "        capacity_mAh = -np.trapz(currents, times)/3600.0 # this uses the composite trapezoidal rule, which is apparently more accurate than a simple trapezoidal.\n",
-    "        capacity_mWh = capacity_mAh*voltage\n",
+    "        capacity_mWh = -np.trapz(currents*voltage, times)/3600.0\n",
     "        capacity.append((cycle, capacity_mAh, capacity_mWh))\n",
     "    capacity_df = pd.DataFrame(capacity, columns=['cycle number', 'capacity/mAh', 'capacity/mWh'])\n",
     "    df = df.merge(capacity_df, on='cycle number', how='left')\n",
@@ -171,7 +143,15 @@
     "    for key, df in dataset.items():\n",
     "        df = add_capacity(df)\n",
     "        dataset[key] = df\n",
-    "    return dataset\n"
+    "    return dataset\n",
+    "\n",
+    "def ListCells(dataset):\n",
+    "    cells = []\n",
+    "    for item in dataset.keys():\n",
+    "        cell_name = item[0:5]\n",
+    "        if not(cell_name in cells):\n",
+    "            cells.append(cell_name)\n",
+    "    return cells"
    ]
   },
   {
@@ -183,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,34 +217,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add calculated values if not already present in the dataset.\n",
-    "# Have a think about whether this should be output to a separate processed folder or read from and sent back to the database.\n",
+    "\"\"\"\n",
+    "I've had the realisation that an easier way of doing this \n",
+    "would've been to merge datasets in the same folder, since they're already separated by the structure...\n",
     "\n",
+    "but hey ho, it's been done this way. c'est la vie.\n",
+    "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
+    "\"\"\"\n",
+    "\n",
+    "for cell in ListCells(Cell_Tests):\n",
+    "    cell = filter_singlecell(Cell_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
+    "    cell = combine_tests(cell)\n",
+    "    \n",
+    "    plot_cell_voltage_current(cell)\n",
     "#print(Cell_Tests)\n",
     "#plot_capacity_allcycles(Cell_Tests['NX001_21-08-23'])\n",
     "#plot_capacity_allcycles(Cell_Tests['NX001_31-07-23'])\n",
     "SG009 = filter_singlecell(Cell_Tests, \"SG009\")\n",
     "SG009 = combine_tests(SG009)\n",
     "SG009.name = \"SG009\"\n",
-    "#print(NX001)\n",
-    "# fix bug where capcity column can duplicate\n",
-    "# check this influences the original array"
+    "#print(NX001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_capacity_allcycles_tohtml(SG009)\n",
-    "#plot_cell_voltage_current(SG009)\n",
-    "\n",
-    "# need to split the data to only plot 1/10th of points\n"
+    "# Add calculated values if not already present in the dataset.\n",
+    "# Have a think about whether this should be output to a separate processed folder or read from and sent back to the database.\n",
+    "# need to split the data to only plot 1/10th of points to make graphs easier to load\n",
+    "# fix bug where capcity column can duplicate"
    ]
   },
   {
