Added requirements.txt auto-install

--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -17,7 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas>=2.1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 1)) (2.1.4)\n",
+      "Requirement already satisfied: plotly>=5.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 2)) (5.9.0)\n",
+      "Requirement already satisfied: numpy>=1.26.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 3)) (1.26.4)\n",
+      "Requirement already satisfied: kaleido>=0.2.1 in c:\\users\\josep\\appdata\\roaming\\python\\python311\\site-packages (from -r requirements.txt (line 4)) (0.2.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2023.3)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from plotly>=5.9.0->-r requirements.txt (line 2)) (8.2.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=2.1.4->-r requirements.txt (line 1)) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run if you're unsure if your packages are up to date.\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +74,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported test NX001_21-08-23 with shape (269049, 5)\n",
+      "Successfully imported test NX001_31-07-23 with shape (120655, 5)\n",
+      "Successfully imported test NX002_21-08-23 with shape (268652, 5)\n",
+      "Successfully imported test NX002_31-07-23 with shape (120808, 5)\n",
+      "Successfully imported test NX006_21-08-23 with shape (207146, 5)\n",
+      "Successfully imported test NX006_31-07-23 with shape (120806, 5)\n",
+      "Successfully imported test RS001_21-08-23 with shape (228545, 5)\n",
+      "Successfully imported test RS001_31-07-23 with shape (120465, 5)\n",
+      "Successfully imported test RS006_21-08-23 with shape (229161, 5)\n",
+      "Successfully imported test RS006_31-07-23 with shape (120383, 5)\n",
+      "Successfully imported test SG003_07-02-23 with shape (693003, 5)\n",
+      "Successfully imported test SG004_07-02-23 with shape (227678, 5)\n",
+      "Successfully imported test SG007_07-02-24 with shape (645535, 5)\n",
+      "Successfully imported test SG007_21-08-23 with shape (460741, 5)\n",
+      "Successfully imported test SG007_31-07-23 with shape (115995, 5)\n",
+      "Successfully imported test SG007_21-08-23 with shape (460741, 5)\n",
+      "Successfully imported test SG008_31-07-23 with shape (116828, 5)\n",
+      "Successfully imported test SG009_07-02-24 with shape (606579, 5)\n",
+      "Successfully imported test SG009_21-08-23 with shape (457872, 5)\n",
+      "Successfully imported test SG009_31-07-23 with shape (114977, 5)\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "data_directory = 'Data/Cycling/'\n",
     "files = glob.iglob(data_directory +'**/*.txt', recursive=True)\n",
@@ -77,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +183,13 @@
     "        # How does Python know that by specifying (group 1), (group 2) that you want to group by the unique value in the table?\n",
     "        # Doing something like this in another framework would require a whole search index with .unique() or iterating by cycle number values.\n",
     "        # Having to debug this to know how/why/what it is doing is why I hate implicit programming.\n",
-    "        group = group[group['I/mA'] < 200] # filter down the group to just the times which are discharging\n",
+    "        group = group[group['I/mA'] < -500] # filter down the group to just the times which are discharging\n",
     "        times = group['time/s'].values\n",
     "        currents = group['I/mA'].values\n",
     "        voltage = group['Ecell/V'].values\n",
     "        # need to filter to just the charge stage\n",
     "        capacity_mAh = -np.trapz(currents, times)/3600.0 # this uses the composite trapezoidal rule, which is apparently more accurate than a simple trapezoidal.\n",
-    "        capacity_mWh = -np.trapz(currents*voltage, times)/3600.0\n",
+    "        capacity_mWh = -np.trapz(currents*voltage, times)/3600.0 # check if this is bugged possibly what was causing the massive datasets\n",
     "        capacity.append((cycle, capacity_mAh, capacity_mWh))\n",
     "    capacity_df = pd.DataFrame(capacity, columns=['cycle number', 'capacity/mAh', 'capacity/mWh'])\n",
     "    df = df.merge(capacity_df, on='cycle number', how='left')\n",
@@ -143,15 +199,7 @@
     "    for key, df in dataset.items():\n",
     "        df = add_capacity(df)\n",
     "        dataset[key] = df\n",
-    "    return dataset\n",
-    "\n",
-    "def ListCells(dataset):\n",
-    "    cells = []\n",
-    "    for item in dataset.keys():\n",
-    "        cell_name = item[0:5]\n",
-    "        if not(cell_name in cells):\n",
-    "            cells.append(cell_name)\n",
-    "    return cells"
+    "    return dataset\n"
    ]
   },
   {
@@ -163,50 +211,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_capacity_allcycles_tohtml(cycle_data):\n",
-    "    fig = plot_capacity_allcycles(cycle_data)\n",
-    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\".html\")\n",
+    "# this could be made less redundant and more efficient.\n",
+    "def plot_capacity_allcycles_tohtml(cycle_data, showfig=False):\n",
+    "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
+    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.html\")\n",
     "\n",
-    "def plot_capacity_allcycles_tosvg(cycle_data):\n",
+    "def plot_capacity_allcycles_tosvg(cycle_data, showfig=False):\n",
     "    # DO NOT USE ON LARGE DATASETS\n",
-    "    fig = plot_capacity_allcycles(cycle_data)\n",
-    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\".svg\")\n",
+    "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
+    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.svg\")\n",
     "\n",
-    "def plot_capacity_allcycles_topdf(cycle_data):\n",
+    "def plot_capacity_allcycles_topdf(cycle_data, showfig=False):\n",
     "    # DO NOT USE ON LARGE DATASETS\n",
-    "    fig = plot_capacity_allcycles(cycle_data)\n",
-    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\".pdf\")\n",
+    "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
+    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.pdf\")\n",
     "\n",
-    "def plot_capacity_allcycles_topng(cycle_data, _width, _height):\n",
-    "    fig = plot_capacity_allcycles(cycle_data)\n",
-    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\".png\", width=_width, height=_height)\n",
+    "def plot_capacity_allcycles_topng(cycle_data, _width, _height, showfig=False):\n",
+    "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
+    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.png\", width=_width, height=_height)\n",
     "\n",
-    "def plot_capacity_allcycles_towindow(cycle_data):\n",
-    "    fig = plot_capacity_allcycles(cycle_data)\n",
-    "    fig.show()\n",
-    "    \n",
-    "def plot_capacity_allcycles(cycle_data):\n",
-    "    return px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
+    "def plot_capacity_allcycles(cycle_data, showfig=True):\n",
+    "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
+    "    if(showfig): fig.show()\n",
+    "    return fig\n",
     "\n",
     "def plot_cell_voltage(cycle_data):\n",
     "    fig = px.line(cycle_data, x=cycle_data['time/s'], y=cycle_data['Ecell/V'], color='cycle number')\n",
     "    fig.update_xaxes(rangeslider_visible=True)\n",
     "    fig.show()\n",
     "\n",
-    "def plot_cell_voltage_current(cycle_data):\n",
-    "    fig = px.line(cycle_data, x=cycle_data['time/s'], y=cycle_data['Ecell/V'], color='cycle number')\n",
-    "    fig.add_trace(go.Line(x=cycle_data['time/s'], y=cycle_data['I/mA']*0.001, name='I/A'))\n",
+    "def plot_cell_voltage_current(cycle_data, showfig=True):\n",
+    "    fig_voltage = px.line(cycle_data, x=cycle_data['time/s'], y=cycle_data['Ecell/V'], color='cycle number')\n",
+    "    fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "    for trace in fig_voltage.data:\n",
+    "        fig.add_trace(trace, secondary_y=False)\n",
+    "\n",
+    "    fig.add_trace(go.Line(x=cycle_data['time/s'], y=cycle_data['I/mA']*0.001, mode='lines', name='I/A'), secondary_y=True)\n",
     "    fig.update_xaxes(rangeslider_visible=True)\n",
-    "    fig.show()"
+    "    if(showfig): fig.show()\n",
+    "    return fig\n",
+    "\n",
+    "def plot_cell_voltage_current_tohtml(cycle_data, showfig=False):\n",
+    "    fig = plot_cell_voltage_current(cycle_data, showfig)\n",
+    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_cycling.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,42 +273,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "I've had the realisation that an easier way of doing this \n",
-    "would've been to merge datasets in the same folder, since they're already separated by the structure...\n",
-    "\n",
-    "but hey ho, it's been done this way. c'est la vie.\n",
-    "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
-    "\"\"\"\n",
-    "\n",
-    "for cell in ListCells(Cell_Tests):\n",
-    "    cell = filter_singlecell(Cell_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
-    "    cell = combine_tests(cell)\n",
-    "    \n",
-    "    plot_cell_voltage_current(cell)\n",
-    "#print(Cell_Tests)\n",
-    "#plot_capacity_allcycles(Cell_Tests['NX001_21-08-23'])\n",
-    "#plot_capacity_allcycles(Cell_Tests['NX001_31-07-23'])\n",
-    "SG009 = filter_singlecell(Cell_Tests, \"SG009\")\n",
-    "SG009 = combine_tests(SG009)\n",
-    "SG009.name = \"SG009\"\n",
-    "#print(NX001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add calculated values if not already present in the dataset.\n",
     "# Have a think about whether this should be output to a separate processed folder or read from and sent back to the database.\n",
-    "# need to split the data to only plot 1/10th of points to make graphs easier to load\n",
-    "# fix bug where capcity column can duplicate"
+    "\n",
+    "#print(Cell_Tests)\n",
+    "SG009 = filter_singlecell(Cell_Tests, \"SG009\")\n",
+    "SG009 = combine_tests(SG009)\n",
+    "SG009.name = \"SG009\"\n",
+    "#print(NX001)\n",
+    "# fix bug where capcity column can duplicate\n",
+    "# check this influences the original array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:378: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Line is deprecated.\n",
+      "Please replace it with one of the following more specific types\n",
+      "  - plotly.graph_objs.scatter.Line\n",
+      "  - plotly.graph_objs.layout.shape.Line\n",
+      "  - etc.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_capacity_allcycles_tohtml(SG009)\n",
+    "plot_cell_voltage_current_tohtml(SG009)\n",
+    "#plot_cell_voltage_current(SG009)\n",
+    "\n",
+    "# need to split the data to only plot 1/10th of points\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SG008 = filter_singlecell(Cell_Tests, \"SG008\")\n",
+    "SG008 = combine_tests(SG008)\n",
+    "SG008.name = \"SG008\"\n",
+    "plot_capacity_allcycles_tohtml(SG008)"
    ]
   },
   {
@@ -271,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +475,17 @@
     "    fig.update_yaxes(title_text=\"Current (A)\", secondary_y=True)\n",
     "\n",
     "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stuff that'll come in handy later\n",
+    "https://towardsdatascience.com/resample-function-of-pandas-79b17ec82a78\n",
+    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.resample.html\n",
+    "blog post on decimating data\n",
+    "https://www.geeksforgeeks.org/python-pandas-dataframe-resample/"
    ]
   }
  ],
