Added comments to the general analysis code.

--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -4,14 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Notebook Guide\n",
-    "- todo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Prerequisites"
    ]
   },
@@ -59,20 +51,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import Files\n",
-    "Files are standardised as per /Data/README.txt\n",
-    "\n",
-    "/Data/Cycling/(Cell)/AX\\_(Cell Type)(Cell ID)\\_(Day)(Month)\\_CAX\n",
-    "\n",
-    "Cell Type = 2 chars.\n",
-    "\n",
-    "Cell ID  = 3 chars"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -107,20 +85,21 @@
    ],
    "source": [
     "data_directory = 'Data/Cycling/'\n",
+    "# Iterate through every folder and sub-folder in the specified directory looking for text files.\n",
     "files = glob.iglob(data_directory +'**/*.txt', recursive=True)\n",
-    "# this will work provided you keep the data format standardised...\n",
-    "Cell_Tests = dict()\n",
+    "Cycling_Tests = dict()\n",
     "\n",
+    "# Convert the csv files into pandas dataframes, and store in a dictionary with (Key=cell_date):(dataframe)\n",
     "def retrieve_files():\n",
     "    dataset = dict()\n",
     "    for f in files:\n",
     "        columns = ['time/s', 'Ecell/V', 'I/mA', 'Temperature/°C', 'cycle number']\n",
     "        temp_df = pd.read_csv(f, sep='\\t', usecols=columns, encoding='ISO-8859-1')\n",
-    "        dataset[os.path.basename(f)[3:17]] = temp_df\n",
+    "        dataset[os.path.basename(f)[3:17]] = temp_df # trims the key for use in the dictionary\n",
     "        print(f'Successfully imported test {os.path.basename(f)[3:17]} with shape {temp_df.shape}')\n",
     "    return dataset\n",
     "\n",
-    "Cell_Tests = retrieve_files()\n",
+    "Cycling_Tests = retrieve_files()\n",
     "print(\"Done\")"
    ]
   },
@@ -138,67 +117,94 @@
    "outputs": [],
    "source": [
     "def add_dates(dataset):\n",
+    "    \"\"\"\n",
+    "    Copies date from key to a column in the dataframe.\n",
+    "    Args:\n",
+    "    dataset (dict): Contains {Key with date of cell test}:{Data from test}\n",
+    "    \"\"\"\n",
+    "    # For test in collection of tests\n",
     "    for key, df in dataset.items():\n",
-    "        df['date'] = pd.to_datetime(key[6:])\n",
+    "        # Add the end of the key (which just contains the date) to the column \"date\"\n",
+    "        df['date'] = pd.to_datetime(key[6:]) \n",
     "    return dataset\n",
     "\n",
-    "def filter_singlecell(dataset, cell_partial_key):\n",
+    "def filter_dataset(dataset, partial_key):\n",
     "    \"\"\"\n",
-    "    Returns a subset of the dataset containing only the cell specified.\n",
+    "    Returns a subset of the dataset containing only items matching the key specified.\n",
     "    Args:\n",
     "    dataset (dict): The dataset to filter.\n",
-    "    cell_partial_key (str): The partial key (cell name) to match.\n",
+    "    partial_key (str): The partial key (usually cell name) to match.\n",
     "    \"\"\"\n",
     "    filtered_dataset = dict()\n",
+    "    # iterate over all items in the dataset\n",
     "    for key, v in dataset.items():\n",
-    "        if cell_partial_key in key:\n",
-    "            filtered_dataset[key] = v\n",
+    "        if partial_key in key: # eg. \"SG009\" would be in SG009_23-04-23\n",
+    "            filtered_dataset[key] = v # Add that entry to the filtered dataset\n",
     "    return filtered_dataset\n",
     "\n",
     "def combine_tests(dataset):\n",
     "    \"\"\"\n",
-    "    correct cycle number\n",
+    "    Returns a single dataframe with all tests performed on that cell.\n",
+    "    Cycle numbers and times are updated to reflect \"total time spent under test conditions\".\n",
+    "    This neglects any time elapsed between tests.\n",
+    "    Args:\n",
+    "    dataset (dict): Contains only tests (key:dataset pairs) performed on the same cell.\n",
     "    \"\"\"\n",
-    "    sorted_keys = sorted(dataset.keys(), key=lambda x: pd.to_datetime(x[6:])) # there's also probably a better way of doing this, but since the codes contain the date might as well do it this way.\n",
-    "    dataframes_temp = [] # there's a better way of doing this that avoids creating an extra list, but this is easy..\n",
+    "    # Pulls the list of keys from the dictionary, extracts the test date and sorts in chronological order.\n",
+    "    sorted_keys = sorted(dataset.keys(), key=lambda x: pd.to_datetime(x[6:])) \n",
+    "    # there's probably a better way of doing this, but since the codes contain the date might as well do it this way.\n",
+    "    dataframes_temp = []\n",
     "    cumulative_time = 0\n",
     "    cumulative_cycles = 0\n",
+    "    # for every test performed on the cell\n",
     "    for key in sorted_keys:\n",
-    "        df = dataset[key]\n",
-    "        df['time/s'] = df['time/s'] + cumulative_time\n",
-    "        df['cycle number'] = df['cycle number'] + cumulative_cycles\n",
-    "        cumulative_time = df['time/s'].max()\n",
-    "        cumulative_cycles = df['cycle number'].max()\n",
-    "        dataframes_temp.append(df)\n",
-    "    combined_df = pd.concat(dataframes_temp, ignore_index=True)\n",
+    "        df = dataset[key] # copy the dataframe to the temp variable\n",
+    "        df['time/s'] = df['time/s'] + cumulative_time # update the time to reflect elapsed test time.\n",
+    "        df['cycle number'] = df['cycle number'] + cumulative_cycles # update the cycle no. to reflect elapsed cycles.\n",
+    "        cumulative_time = df['time/s'].max() # set the cumulative time for the next iteration.\n",
+    "        cumulative_cycles = df['cycle number'].max() # set the cumulative cycles to the next iteration.\n",
+    "        dataframes_temp.append(df) # copy this ammended dataframe to the temp list.\n",
+    "    combined_df = pd.concat(dataframes_temp, ignore_index=True) # merge all of the dataframes in the temp list into a single dataframe.\n",
     "    return combined_df\n",
     "\n",
     "def add_capacity(df):\n",
     "    \"\"\"\n",
-    "    Requires some work on the filtering side.\n",
+    "    Calculates the cycle capacity in mAh and mWh for a cell test and adds extra columns to the dataframe.\n",
+    "    Returns appended dataframe.\n",
     "    \"\"\"\n",
+    "    # Retrospectively, I've realised this is ridiculously inefficient.\n",
+    "    # Rather than merge the dataset, I could have just plotted the capacity vs cycle number directly from this...\n",
+    "    # Potentially saving a few hundred mb of RAM.\n",
     "    grouped = df.groupby('cycle number')\n",
     "    capacity = []\n",
+    "    # group the dataset by cycle number\n",
     "    for cycle, group in grouped: # I'm kind of amazed that this works....\n",
-    "        # How does Python know that by specifying (group 1), (group 2) that you want to group by the unique value in the table?\n",
-    "        # Doing something like this in another framework would require a whole search index with .unique() or iterating by cycle number values.\n",
-    "        # Having to debug this to know how/why/what it is doing is why I hate implicit programming.\n",
-    "        group = group[group['I/mA'] < -500] # filter down the group to just the times which are discharging\n",
+    "        # Having to debug this to know how/why/what it is doing is why I dislike implicit programming languages.\n",
+    "        group = group[group['I/mA'] < -400] # filter down the group to just the times which are discharging and exclude discharges that aren't tests.\n",
+    "        # discharge tests occur at 500mA minimum.\n",
     "        times = group['time/s'].values\n",
     "        currents = group['I/mA'].values\n",
     "        voltage = group['Ecell/V'].values\n",
-    "        # need to filter to just the charge stage\n",
-    "        capacity_mAh = -np.trapz(currents, times)/3600.0 # this uses the composite trapezoidal rule, which is apparently more accurate than a simple trapezoidal.\n",
-    "        capacity_mWh = -np.trapz(currents*voltage, times)/3600.0 # check if this is bugged possibly what was causing the massive datasets\n",
+    "        # Take the total dicharge over the cycle * time = capacity in mAh\n",
+    "        capacity_mAh = -np.trapz(currents, times)/3600.0 \n",
+    "        # this uses the composite trapezoidal rule, which is apparently more accurate than a simple trapezoidal.\n",
+    "        # I have no idea what the difference is.\n",
+    "        capacity_mWh = -np.trapz(currents*voltage, times)/3600.0 \n",
+    "        # I originally tried capacity_mAh * voltage. This doesn't work and creates massive and very wrong datasets.\n",
     "        capacity.append((cycle, capacity_mAh, capacity_mWh))\n",
+    "    # Merge the capacity vs cycle number and the main dataset.\n",
     "    capacity_df = pd.DataFrame(capacity, columns=['cycle number', 'capacity/mAh', 'capacity/mWh'])\n",
     "    df = df.merge(capacity_df, on='cycle number', how='left')\n",
     "    return df\n",
     "\n",
     "def add_capacity_dataset(dataset):\n",
+    "    \"\"\"\"\n",
+    "    Adds the capacity column for all items in the dataset.\n",
+    "    Returns updated dataset.\n",
+    "    \"\"\"\n",
     "    for key, df in dataset.items():\n",
-    "        df = add_capacity(df)\n",
-    "        dataset[key] = df\n",
+    "        df = add_capacity(df) # calculate capacity for the test..\n",
+    "        dataset[key] = df # update this test with the calculated values.\n",
     "    return dataset\n"
    ]
   },
@@ -216,48 +222,77 @@
    "outputs": [],
    "source": [
     "# this could be made less redundant and more efficient.\n",
+    "\n",
     "def plot_capacity_allcycles_tohtml(cycle_data, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Exports plots to HTML (Plot remains interactive). ShowFig outputs to Jupyter, but is slow.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
     "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.html\")\n",
     "\n",
     "def plot_capacity_allcycles_tosvg(cycle_data, showfig=False):\n",
-    "    # DO NOT USE ON LARGE DATASETS\n",
+    "    \"\"\"\n",
+    "    Exports plots to SVG (Static Vector Plot), ShowFig outputs to Jupyter, but is slow.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
     "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.svg\")\n",
     "\n",
     "def plot_capacity_allcycles_topdf(cycle_data, showfig=False):\n",
-    "    # DO NOT USE ON LARGE DATASETS\n",
+    "    \"\"\"\n",
+    "    Exports plots to PDF (Static Vector Plot), ShowFig outputs to Jupyter, but is slow.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
     "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.pdf\")\n",
     "\n",
     "def plot_capacity_allcycles_topng(cycle_data, _width, _height, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Exports plots to PNG (Static Image Plot), ShowFig outputs to Jupyter.\n",
+    "    \"\"\"\n",
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
     "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.png\", width=_width, height=_height)\n",
     "\n",
     "def plot_capacity_allcycles(cycle_data, showfig=True):\n",
+    "    \"\"\"\n",
+    "    Returns a pyplot figure with Capacity in mAh against cycle number.\n",
+    "    \"\"\"\n",
     "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
     "    if(showfig): fig.show()\n",
     "    return fig\n",
     "\n",
     "def plot_cell_voltage(cycle_data):\n",
+    "    \"\"\"\n",
+    "    Outputs an interactive plot of cell voltage with time. Cycle number indicated by colour.\n",
+    "    \"\"\"\n",
     "    fig = px.line(cycle_data, x=cycle_data['time/s'], y=cycle_data['Ecell/V'], color='cycle number')\n",
     "    fig.update_xaxes(rangeslider_visible=True)\n",
     "    fig.show()\n",
     "\n",
     "def plot_cell_voltage_current(cycle_data, showfig=True):\n",
+    "    \"\"\"\n",
+    "    Returns an interactive plot of voltage and current.\n",
+    "    \"\"\"\n",
     "    fig_voltage = px.line(cycle_data, x=cycle_data['time/s'], y=cycle_data['Ecell/V'], color='cycle number')\n",
     "    fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
     "    for trace in fig_voltage.data:\n",
     "        fig.add_trace(trace, secondary_y=False)\n",
-    "\n",
     "    fig.add_trace(go.Line(x=cycle_data['time/s'], y=cycle_data['I/mA']*0.001, mode='lines', name='I/A'), secondary_y=True)\n",
     "    fig.update_xaxes(rangeslider_visible=True)\n",
     "    if(showfig): fig.show()\n",
     "    return fig\n",
     "\n",
     "def plot_cell_voltage_current_tohtml(cycle_data, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Outputs an interactive plot of cell voltage with time to a HTML file. Cycle number indicated by colour.\n",
+    "    ShowFig enables output to Jupyter.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
     "    fig = plot_cell_voltage_current(cycle_data, showfig)\n",
-    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_cycling.html\")"
+    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_cycling.html\")\n",
+    "\n",
+    "# add temperature plots."
    ]
   },
   {
@@ -266,9 +301,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ONLY RUN ONCE!! CURRENTLY BUGGED WHEN RUNNING MULTIPLE TIMES\n",
-    "Cell_Tests = add_dates(Cell_Tests)\n",
-    "Cell_Tests = add_capacity_dataset(Cell_Tests)"
+    "# ONLY RUN ONCE!! CURRENTLY BUGGED WHEN RUNNING MULTIPLE TIMES AS DUPLICATES THE CAPACITY COLUMN\n",
+    "Cycling_Tests = add_dates(Cycling_Tests) # Add test dates in column to all data.\n",
+    "Cycling_Tests = add_capacity_dataset(Cycling_Tests) # Add capacity in mAh and mWh to all data."
    ]
   },
   {
@@ -277,57 +312,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add calculated values if not already present in the dataset.\n",
     "# Have a think about whether this should be output to a separate processed folder or read from and sent back to the database.\n",
-    "\n",
-    "#print(Cell_Tests)\n",
-    "SG009 = filter_singlecell(Cell_Tests, \"SG009\")\n",
-    "SG009 = combine_tests(SG009)\n",
-    "SG009.name = \"SG009\"\n",
-    "#print(NX001)\n",
-    "# fix bug where capcity column can duplicate\n",
-    "# check this influences the original array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:378: DeprecationWarning:\n",
-      "\n",
-      "plotly.graph_objs.Line is deprecated.\n",
-      "Please replace it with one of the following more specific types\n",
-      "  - plotly.graph_objs.scatter.Line\n",
-      "  - plotly.graph_objs.layout.shape.Line\n",
-      "  - etc.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_capacity_allcycles_tohtml(SG009)\n",
-    "plot_cell_voltage_current_tohtml(SG009)\n",
-    "#plot_cell_voltage_current(SG009)\n",
-    "\n",
-    "# need to split the data to only plot 1/10th of points\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SG008 = filter_singlecell(Cell_Tests, \"SG008\")\n",
-    "SG008 = combine_tests(SG008)\n",
-    "SG008.name = \"SG008\"\n",
-    "plot_capacity_allcycles_tohtml(SG008)"
+    "# need to split the data to only plot 1/10th of points it plotting against time."
    ]
   },
   {
