i am in git purgatory and keep losing progress...

--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -205,7 +205,15 @@
     "    for key, df in dataset.items():\n",
     "        df = add_capacity(df) # calculate capacity for the test..\n",
     "        dataset[key] = df # update this test with the calculated values.\n",
-    "    return dataset\n"
+    "    return dataset\n",
+    "\n",
+    "def ListCells(dataset):\n",
+    "    cells = []\n",
+    "    for item in dataset.keys():\n",
+    "        cell_name = item[0:5]\n",
+    "        if not(cell_name in cells):\n",
+    "            cells.append(cell_name)\n",
+    "    return cells"
    ]
   },
   {
@@ -304,6 +312,25 @@
     "# ONLY RUN ONCE!! CURRENTLY BUGGED WHEN RUNNING MULTIPLE TIMES AS DUPLICATES THE CAPACITY COLUMN\n",
     "Cycling_Tests = add_dates(Cycling_Tests) # Add test dates in column to all data.\n",
     "Cycling_Tests = add_capacity_dataset(Cycling_Tests) # Add capacity in mAh and mWh to all data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "I've had the realisation that an easier way of doing this \n",
+    "would've been to merge datasets in the same folder, since they're already separated by the structure...\n",
+    "\n",
+    "but hey ho, it's been done this way. c'est la vie.\n",
+    "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
+    "\"\"\"\n",
+    "\n",
+    "for cell in ListCells(Cell_Tests):\n",
+    "    cell = filter_singlecell(Cell_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
+    "    cell = combine_tests(cell)"
    ]
   },
   {
