--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,11 +21,51 @@
       "Requirement already satisfied: plotly>=5.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 2)) (5.9.0)\n",
       "Requirement already satisfied: numpy>=1.26.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 3)) (1.26.4)\n",
       "Requirement already satisfied: kaleido>=0.2.1 in c:\\users\\josep\\appdata\\roaming\\python\\python311\\site-packages (from -r requirements.txt (line 4)) (0.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=2.1.4->-r requirements.txt (line 1)) (2023.3)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from plotly>=5.9.0->-r requirements.txt (line 2)) (8.2.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=2.1.4->-r requirements.txt (line 1)) (1.16.0)\n"
+      "Collecting scipy>=1.13.1 (from -r requirements.txt (line 5))\n",
+      "  Downloading scipy-1.13.1-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.6 kB ? eta -:--:--\n",
+      "     ------------ ------------------------- 20.5/60.6 kB 640.0 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.6/60.6 kB 799.0 kB/s eta 0:00:00\n",
+      "Collecting sklearn (from -r requirements.txt (line 6))\n",
+      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × python setup.py egg_info did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [15 lines of output]\n",
+      "      The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
+      "      rather than 'sklearn' for pip commands.\n",
+      "      \n",
+      "      Here is how to fix this error in the main use cases:\n",
+      "      - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
+      "      - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
+      "        (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
+      "      - if the 'sklearn' package is used by one of your dependencies,\n",
+      "        it would be great if you take some time to track which package uses\n",
+      "        'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
+      "      - as a last resort, set the environment variable\n",
+      "        SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
+      "      \n",
+      "      More information is available at\n",
+      "      https://github.com/scikit-learn/sklearn-pypi-package\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "× Encountered error while generating package metadata.\n",
+      "╰─> See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
      ]
     }
    ],
@@ -37,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,9 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22564\\3804865056.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcell\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mListCells\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCycling_Tests\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mcell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCycling_Tests\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# cell is recast from a string, to the dataset belonging to that cell\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mcell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombine_tests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mplot_capacity_allcycles_tohtml\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mplot_cell_voltage_current_tohtml\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22564\\3289343304.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(cycle_data, showfig)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mExports\u001b[0m \u001b[0mplots\u001b[0m \u001b[0mto\u001b[0m \u001b[0mHTML\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mPlot\u001b[0m \u001b[0mremains\u001b[0m \u001b[0minteractive\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mShowFig\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0mto\u001b[0m \u001b[0mJupyter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbut\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mslow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \"\"\"\n\u001b[0;32m      7\u001b[0m     \u001b[1;31m# DO NOT USE ON LARGE DATASETS > 100k points\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplot_capacity_allcycles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcycle_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshowfig\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_html\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_directory\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/Output/\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mcycle_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"_capacity.html\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         ):\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'name'"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "I've had the realisation that an easier way of doing this \n",
@@ -328,14 +382,16 @@
     "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
     "\"\"\"\n",
     "\n",
-    "for cell in ListCells(Cell_Tests):\n",
-    "    cell = filter_singlecell(Cell_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
-    "    cell = combine_tests(cell)"
+    "for cell in ListCells(Cycling_Tests):\n",
+    "    cell = filter_dataset(Cycling_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
+    "    cell = combine_tests(cell)\n",
+    "    plot_capacity_allcycles_tohtml(cell)\n",
+    "    plot_cell_voltage_current_tohtml(cell)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
