--- a/General_analysis_copy.ipynb
+++ b/General_analysis_copy.ipynb
@@ -22,12 +22,9 @@
       "Requirement already satisfied: numpy>=1.26.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from -r requirements.txt (line 3)) (1.26.4)\n",
       "Requirement already satisfied: kaleido>=0.2.1 in c:\\users\\josep\\appdata\\roaming\\python\\python311\\site-packages (from -r requirements.txt (line 4)) (0.2.1)\n",
       "Collecting scipy>=1.13.1 (from -r requirements.txt (line 5))\n",
-      "  Downloading scipy-1.13.1-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
-      "     ---------------------------------------- 0.0/60.6 kB ? eta -:--:--\n",
-      "     ------------ ------------------------- 20.5/60.6 kB 640.0 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 60.6/60.6 kB 799.0 kB/s eta 0:00:00\n",
+      "  Using cached scipy-1.13.1-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
       "Collecting sklearn (from -r requirements.txt (line 6))\n",
-      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'error'\n"
      ]
@@ -77,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,6 +250,14 @@
     "        cell_name = item[0:5]\n",
     "        if not(cell_name in cells):\n",
     "            cells.append(cell_name)\n",
+    "    return cells\n",
+    "\n",
+    "def ListCellTypes(dataset):\n",
+    "    cells = []\n",
+    "    for item in dataset.keys():\n",
+    "        cell_name = item[0:2]\n",
+    "        if not(cell_name in cells):\n",
+    "            cells.append(cell_name)\n",
     "    return cells"
    ]
   },
@@ -265,11 +270,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this could be made less redundant and more efficient.\n",
+    "def plot_capacity_Wh_allcycles_tohtml(cycle_data, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Exports plots to HTML (Plot remains interactive). ShowFig outputs to Jupyter, but is slow.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
+    "    fig = plot_capacity_Wh_allcycles(cycle_data, showfig)\n",
+    "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_capacity_Wh.html\")\n",
+    "\n",
+    "def plot_capacity_Wh_allcycles(cycle_data, showfig=True):\n",
+    "    \"\"\"\n",
+    "    Returns a pyplot figure with Capacity in mWh against cycle number.\n",
+    "    \"\"\"\n",
+    "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mWh'], color='date')\n",
+    "    if(showfig): fig.show()\n",
+    "    return fig\n",
+    "\n",
     "\n",
     "def plot_capacity_allcycles_tohtml(cycle_data, showfig=False):\n",
     "    \"\"\"\n",
@@ -295,12 +316,12 @@
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
     "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.pdf\")\n",
     "\n",
-    "def plot_capacity_allcycles_topng(cycle_data, _width, _height, showfig=False):\n",
+    "def plot_capacity_allcycles_topng(cycle_data, showfig=False):\n",
     "    \"\"\"\n",
     "    Exports plots to PNG (Static Image Plot), ShowFig outputs to Jupyter.\n",
     "    \"\"\"\n",
     "    fig = plot_capacity_allcycles(cycle_data, showfig)\n",
-    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.png\", width=_width, height=_height)\n",
+    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_capacity.png\")\n",
     "\n",
     "def plot_capacity_allcycles(cycle_data, showfig=True):\n",
     "    \"\"\"\n",
@@ -308,6 +329,27 @@
     "    \"\"\"\n",
     "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
     "    if(showfig): fig.show()\n",
+    "    return fig\n",
+    "\n",
+    "def plot_capacity_celltype(capacity_data):\n",
+    "    \"\"\"\n",
+    "    Outputs a plot with all tests performed on a given cell type.\n",
+    "    Input is a list of pyplot traces.\n",
+    "    \"\"\"\n",
+    "    fig = go.Figure()\n",
+    "    for df in capacity_data:\n",
+    "        fig.add_trace(go.Line(x=df['cycle number'], y=df['capacity/mAh'], mode='lines'))\n",
+    "    fig.update_xaxes(title_text=\"Cycle Nmber\")\n",
+    "    fig.update_yaxes(title_text=\"Capacity/mWh\")\n",
+    "    fig.update_layout(title_text='Capacity vs. Cycle Number for Multiple Cells')\n",
+    "\n",
+    "def output_capacity_Wh_allcycles(cycle_data, cell_name):\n",
+    "    \"\"\"\n",
+    "    Returns a pyplot trace to be included in a plot with Capacity in mWh against cycle number.\n",
+    "    \"\"\"\n",
+    "    string = 'capacity/mAh for cell +' + cell_name\n",
+    "    fig= go.Line(x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], mode='lines', name=string)\n",
+    "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
     "    return fig\n",
     "\n",
     "def plot_cell_voltage(cycle_data):\n",
@@ -333,19 +375,28 @@
     "\n",
     "def plot_cell_voltage_current_tohtml(cycle_data, showfig=False):\n",
     "    \"\"\"\n",
-    "    Outputs an interactive plot of cell voltage with time to a HTML file. Cycle number indicated by colour.\n",
+    "    Outputs an interactive plot of cell voltage + current with time to a HTML file. Cycle number indicated by colour.\n",
     "    ShowFig enables output to Jupyter.\n",
     "    \"\"\"\n",
     "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
     "    fig = plot_cell_voltage_current(cycle_data, showfig)\n",
     "    fig.write_html(data_directory+\"/Output/\"+cycle_data.name+\"_cycling.html\")\n",
     "\n",
+    "def plot_cell_voltage_current_topng(cycle_data, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Outputs plot of cell voltage + current with time to a png file. Cycle number indicated by colour.\n",
+    "    ShowFig enables output to Jupyter.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
+    "    fig = plot_cell_voltage_current(cycle_data, showfig)\n",
+    "    fig.write_image(data_directory+\"/Output/\"+cycle_data.name+\"_cycling.png\")\n",
+    "\n",
     "# add temperature plots."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,20 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22564\\3804865056.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcell\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mListCells\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCycling_Tests\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mcell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCycling_Tests\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# cell is recast from a string, to the dataset belonging to that cell\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mcell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcombine_tests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mplot_capacity_allcycles_tohtml\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mplot_cell_voltage_current_tohtml\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22564\\3289343304.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(cycle_data, showfig)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mExports\u001b[0m \u001b[0mplots\u001b[0m \u001b[0mto\u001b[0m \u001b[0mHTML\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mPlot\u001b[0m \u001b[0mremains\u001b[0m \u001b[0minteractive\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mShowFig\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0mto\u001b[0m \u001b[0mJupyter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbut\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mslow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \"\"\"\n\u001b[0;32m      7\u001b[0m     \u001b[1;31m# DO NOT USE ON LARGE DATASETS > 100k points\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplot_capacity_allcycles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcycle_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshowfig\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_html\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_directory\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/Output/\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mcycle_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"_capacity.html\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         ):\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NX001', 'NX002', 'NX006', 'RS001', 'RS006', 'SG003', 'SG004', 'SG007', 'SG008', 'SG009']\n"
      ]
     }
    ],
@@ -381,17 +426,47 @@
     "but hey ho, it's been done this way. c'est la vie.\n",
     "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
     "\"\"\"\n",
+    "# there's a bug where when this is run multiple times sometimes the combine tests code will just add more cycles than it should...\n",
+    "print(ListCells(Cycling_Tests))\n",
     "\n",
-    "for cell in ListCells(Cycling_Tests):\n",
-    "    cell = filter_dataset(Cycling_Tests, cell) # cell is recast from a string, to the dataset belonging to that cell\n",
+    "for cell_name in ListCells(Cycling_Tests):\n",
+    "    cell = filter_dataset(Cycling_Tests, cell_name) # cell is recast from a string, to the dataset belonging to that cell\n",
     "    cell = combine_tests(cell)\n",
+    "    cell.name = cell_name\n",
     "    plot_capacity_allcycles_tohtml(cell)\n",
-    "    plot_cell_voltage_current_tohtml(cell)"
+    "    #plot_cell_voltage_current_tohtml(cell)\n",
+    "    #plot_capacity_allcycles_topng(cell)\n",
+    "    plot_capacity_Wh_allcycles_tohtml(cell)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NX', 'RS', 'SG']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cell_type in ListCellTypes(Cycling_Tests):\n",
+    "    # for each cell type\n",
+    "    all_tests_cell = []\n",
+    "    type = filter_dataset(Cycling_Tests, cell_type)\n",
+    "\n",
+    "# TBD\n",
+    "\n",
+    "\n",
+    "# only thing its missing is the cell name in the legend...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
