I GOT THE CAPACITY BY CELL TYPE WORKING WOOP WOOP

--- a/General_analysis.ipynb
+++ b/General_analysis.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,9 @@
     "    return dataset\n",
     "\n",
     "def ListCells(dataset):\n",
+    "    \"\"\"\"\n",
+    "    Lists all unique cell names (cell)(id) in the dataset.\n",
+    "    \"\"\"\n",
     "    cells = []\n",
     "    for item in dataset.keys():\n",
     "        cell_name = item[0:5]\n",
@@ -253,6 +256,9 @@
     "    return cells\n",
     "\n",
     "def ListCellTypes(dataset):\n",
+    "    \"\"\"\"\n",
+    "    Lists all unique cell types in the dataset.\n",
+    "    \"\"\"\n",
     "    cells = []\n",
     "    for item in dataset.keys():\n",
     "        cell_name = item[0:2]\n",
@@ -270,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,17 +337,27 @@
     "    if(showfig): fig.show()\n",
     "    return fig\n",
     "\n",
-    "def plot_capacity_celltype(capacity_data):\n",
+    "def plot_capacity_celltype_tohtml(cycle_data, type_name, showfig=False):\n",
+    "    \"\"\"\n",
+    "    Exports plots to HTML (Plot remains interactive). ShowFig outputs to Jupyter, but is slow.\n",
+    "    \"\"\"\n",
+    "    # DO NOT USE ON LARGE DATASETS > 100k points\n",
+    "    fig = plot_capacity_celltype(cycle_data, showfig)\n",
+    "    fig.write_html(data_directory+\"/Output/\"+type_name+\"_capacity.html\")\n",
+    "\n",
+    "def plot_capacity_celltype(capacity_data, showfig=False):\n",
     "    \"\"\"\n",
     "    Outputs a plot with all tests performed on a given cell type.\n",
     "    Input is a list of pyplot traces.\n",
     "    \"\"\"\n",
     "    fig = go.Figure()\n",
     "    for df in capacity_data:\n",
-    "        fig.add_trace(go.Line(x=df['cycle number'], y=df['capacity/mAh'], mode='lines'))\n",
+    "        fig.add_trace(go.Line(x=df['cycle number'], y=df['capacity/mWh'], mode='lines'))\n",
     "    fig.update_xaxes(title_text=\"Cycle Nmber\")\n",
     "    fig.update_yaxes(title_text=\"Capacity/mWh\")\n",
     "    fig.update_layout(title_text='Capacity vs. Cycle Number for Multiple Cells')\n",
+    "    if(showfig): fig.show()\n",
+    "    return fig\n",
     "\n",
     "def output_capacity_Wh_allcycles(cycle_data, cell_name):\n",
     "    \"\"\"\n",
@@ -349,7 +365,6 @@
     "    \"\"\"\n",
     "    string = 'capacity/mAh for cell +' + cell_name\n",
     "    fig= go.Line(x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], mode='lines', name=string)\n",
-    "    fig = px.line(cycle_data, x=cycle_data['cycle number'], y=cycle_data['capacity/mAh'], color='date')\n",
     "    return fig\n",
     "\n",
     "def plot_cell_voltage(cycle_data):\n",
@@ -396,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,14 +422,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "['NX001', 'NX002', 'NX006', 'RS001', 'RS006', 'SG003', 'SG004', 'SG007', 'SG008', 'SG009']\n"
+      "c:\\ProgramData\\anaconda3\\Lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:378: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Line is deprecated.\n",
+      "Please replace it with one of the following more specific types\n",
+      "  - plotly.graph_objs.scatter.Line\n",
+      "  - plotly.graph_objs.layout.shape.Line\n",
+      "  - etc.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -427,31 +450,33 @@
     "I guess the advantage is that it scales even if more cells get added in the future, and you don't need to care about folder structure.\n",
     "\"\"\"\n",
     "# there's a bug where when this is run multiple times sometimes the combine tests code will just add more cycles than it should...\n",
-    "print(ListCells(Cycling_Tests))\n",
-    "\n",
+    "cell_types = dict()\n",
+    "for cell_type in ListCellTypes(Cycling_Tests):\n",
+    "    cell_types[cell_type]=[]\n",
+    "    \n",
     "for cell_name in ListCells(Cycling_Tests):\n",
     "    cell = filter_dataset(Cycling_Tests, cell_name) # cell is recast from a string, to the dataset belonging to that cell\n",
     "    cell = combine_tests(cell)\n",
     "    cell.name = cell_name\n",
-    "    plot_capacity_allcycles_tohtml(cell)\n",
+    "    cell_types[cell_name[0:2]].append(cell)\n",
+    "    # uncomment when you want to plot these.\n",
+    "    #plot_capacity_allcycles_tohtml(cell)\n",
     "    #plot_cell_voltage_current_tohtml(cell)\n",
     "    #plot_capacity_allcycles_topng(cell)\n",
-    "    plot_capacity_Wh_allcycles_tohtml(cell)\n"
+    "    #plot_capacity_Wh_allcycles_tohtml(cell)\n",
+    "\n",
+    "for cell_type in cell_types:\n",
+    "    dataset = []\n",
+    "    for cell in cell_types[cell_type]:\n",
+    "        dataset.append(cell)\n",
+    "    plot_capacity_celltype_tohtml(dataset, cell_type)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['NX', 'RS', 'SG']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for cell_type in ListCellTypes(Cycling_Tests):\n",
     "    # for each cell type\n",
@@ -466,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
