Updated website with images and fixed the typo on graphs.

--- a/General_analysis.ipynb
+++ b/General_analysis.ipynb
@@ -353,7 +353,7 @@
     "    fig = go.Figure()\n",
     "    for df in capacity_data:\n",
     "        fig.add_trace(go.Line(x=df['cycle number'], y=df['capacity/mWh'], mode='lines'))\n",
-    "    fig.update_xaxes(title_text=\"Cycle Nmber\")\n",
+    "    fig.update_xaxes(title_text=\"Cycle Number\")\n",
     "    fig.update_yaxes(title_text=\"Capacity/mWh\")\n",
     "    fig.update_layout(title_text='Capacity vs. Cycle Number for Multiple Cells')\n",
     "    if(showfig): fig.show()\n",
